Slides 05: Add DLT equations

--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -21,7 +21,8 @@
 \usepackage{algorithm} % to put captions to the algorithmics environmets
 \usepackage{algpseudocode} % to write algorithm
 \usepackage{tikz} % to use tikz
-\usepackage[export]{adjustbox} %valign in subfloat
+\usetikzlibrary{fit} % to fit a node around other nodes in tikz
+\usepackage[export]{adjustbox} % valign in subfloat
 \usepackage{colortbl} % to paint cells in a table
 
 % Color commands for annotations
