Slides 05: Add bibliography

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -411,3 +411,15 @@ SLAM Handbook
   publisher={Cambridge University Press}
 }
 
+% Computer Vision: Algorithms and Applications
+@book{szeliski2022computer,
+  author    = {Richard Szeliski},
+  title     = {\href{https://szeliski.org/Book/}{Computer Vision: Algorithms and Applications}},
+  edition   = {2nd},
+  publisher = {Springer Nature},
+  year      = {2022},
+  isbn      = {978-3-031-06413-4},
+  doi       = {10.1007/978-3-031-06414-1},
+  url       = {https://szeliski.org/Book/}
+}
+
