--- a/teoricas/teorica_05/src/bibliography.tex
+++ b/teoricas/teorica_05/src/bibliography.tex
@@ -12,6 +12,7 @@
 \begin{frame}
 	\frametitle{Bibliografía}
 	\nocite{hartley2003multiple}
+    \nocite{szeliski2022computer}
 	
 	\printbibliography
 	
