--- a/teoricas/teorica_05/src/direct_linear_transform.tex
+++ b/teoricas/teorica_05/src/direct_linear_transform.tex
@@ -426,19 +426,158 @@ Implica
 \begin{frame}
   \frametitle{Solving the Linear System (Homogeneous System => SVD)}
   \begin{itemize}
-    \item Solve $A\vec{p}=0$ via SVD.
-    \item Choose $\vec{p}$ as singular vector of smallest singular value.
-  \end{itemize}
-  % \includegraphics[width=0.6\textwidth]{placeholder-image.jpg}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Redundant Observations}
-  \begin{itemize}
     \item Solving a system of linear equations of the form $\vec{A}\vec{x} = \vec{0}$ is equivalent to finding the null space of $\vec{A}$
     \item Thus, we can apply the SVD to solve $\vec{M}\vec{p} = \vec{0}$
     \item Choose $\vec{p}$ as the singular vector belonging to the singular value of 0
   \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Redundant Observations}
+    \begin{itemize}
+        \item In case of redundant observations, we will have contradictions ($M\mathbf{p} \neq \mathbf{0}$):
+        \[
+            \mathbf{M} \mathbf{p} = \mathbf{w}
+        \]
+        \item Find $\mathbf{p}$ such that it minimizes
+        \[
+            \Omega = \mathbf{w}^\mathsf{T} \mathbf{w}
+        \]
+        \[
+            \implies \mathbf{\hat{p}} = \underset{\mathbf{p}}{\arg\min} \ \mathbf{w}^\mathsf{T} \mathbf{w}
+        \]
+        \[
+            = \underset{\mathbf{p}}{\arg\min} \ \mathbf{p}^\mathsf{T} \mathbf{M}^\mathsf{T} \mathbf{M} \mathbf{p}
+        \]
+        \text{with} $\lVert\mathbf{P}\rVert_2 = \sum_{i,j} p_{ij}^2 = \lVert\mathbf{p}\rVert = 1$
+    \end{itemize}
+\end{frame}
+
+
+% --- Slide: Redundant Observations (2) ---
+\begin{frame}
+    \frametitle{Redundant Observations}
+    \begin{itemize}
+        \item Singular value decomposition (SVD)
+        \[
+            \mathbf{M}_{2I \times 12} = \mathbf{U}_{2I \times 12} \mathbf{S}_{12 \times 12} \mathbf{V}_{12 \times 12}^\mathsf{T} = \sum_{i=1}^{12} s_i \mathbf{u}_i \mathbf{v}_i^\mathsf{T}
+        \]
+        \item Choosing $\mathbf{p} = \mathbf{v}_{12}$ (the singular vector belonging to the **smallest singular value** $s_{12}$) minimizes $\Omega$
+    \end{itemize}
+\end{frame}
+
+% --- Slide: Obtaining the Projection Matrix ---
+\begin{frame}
+    \frametitle{Obtaining the Projection Matrix}
+    \begin{itemize}
+        \item Choosing $\mathbf{p} = \mathbf{v}_{12}$ minimizes $\Omega$ and thus is our estimate of $\mathbf{P}$:
+        \[
+            \mathbf{p} = \begin{bmatrix}
+            p_{11} \\
+            \vdots \\
+            p_{34}
+            \end{bmatrix}
+            \implies
+            \mathbf{P} = \begin{bmatrix}
+            p_{11} & p_{12} & p_{13} & p_{14} \\
+            p_{21} & p_{22} & p_{23} & p_{24} \\
+            p_{31} & p_{32} & p_{33} & p_{34}
+            \end{bmatrix}
+        \]
+    \end{itemize}
+    \vspace{1cm}
+    \centering
+    \textcolor{red}{\bfseries Does this always work?}
+\end{frame}
+
+% --- Slide: Critical Surfaces (1 - The one with the note e.g.) ---
+\begin{frame}
+    \frametitle{Critical Surfaces}
+    \begin{itemize}
+        \item $\mathbf{M}$ is of rank 11, if
+        \begin{itemize}
+            \item Number of points $\geq 6$
+            \item Assumption: no gross errors
+        \end{itemize}
+        \item \textcolor{red}{\bfseries No solution}, if all points $\mathbf{X}_i$ are located on a \textcolor{red}{\bfseries plane}
+    \end{itemize}
+
+    \vspace{0.5cm}
+    \centering
+    % The matrix part is complex due to the arrows, so we'll use a simplified aligned version
+    \begin{equation*}
+    \mathbf{M} = 
+    \begin{bmatrix}
+    \cdots \\
+    \mathbf{a}_{x_i}^\mathsf{T} \\
+    \mathbf{a}_{y_i}^\mathsf{T} \\
+    \cdots
+    \end{bmatrix}
+    \end{equation*}
+    % The example row structure with arrows is very complex to code precisely,
+    % but we can represent the key row structure.
+    \vspace{1cm}
+    \begin{equation*}
+    \mathbf{a}_{x_i}^\mathsf{T} \implies
+    \begin{bmatrix}
+        \cdots \\
+        -X_i & -Y_i & -Z_i & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & x_i Z_i & x_i \\
+        0 & 0 & 0 & 0 & -X_i & -Y_i & -Z_i & -1 & y_i X_i & y_i Y_i & y_i Z_i & y_i \\
+        \cdots
+    \end{bmatrix}
+    \end{equation*}
+    \vspace{-1.5cm} % Pull up the matrix slightly to make space for the note
+    \begin{tikzpicture}[overlay, remember picture]
+        \draw[->, thick, red] ([xshift=2cm, yshift=0.5cm]current bounding box.south) -- ([xshift=4cm, yshift=1cm]current bounding box.south) node[right, red, align=left] {e.g., assume all $Z_i=0$};
+    \end{tikzpicture}
+\end{frame}
+
+% --- Slide: Critical Surfaces (2 - The one with the boxes/rank deficiency) ---
+\begin{frame}
+    \frametitle{Critical Surfaces}
+    \begin{itemize}
+        \item $\mathbf{M}$ is of rank 11, if
+        \begin{itemize}
+            \item Number of points $\geq 6$
+            \item Assumption: no gross errors
+        \end{itemize}
+        \item \textcolor{red}{\bfseries No solution}, if all points $\mathbf{X}_i$ are located on a \textcolor{red}{\bfseries plane}
+    \end{itemize}
+
+    \vspace{0.5cm}
+    \centering
+    % Simplified matrix structure focusing on the blocks
+    \begin{equation*}
+    \mathbf{M} = 
+    \begin{bmatrix}
+    \cdots \\
+    \mathbf{a}_{x_i}^\mathsf{T} \\
+    \mathbf{a}_{y_i}^\mathsf{T} \\
+    \cdots
+    \end{bmatrix}
+    \end{equation*}
+
+    % Matrix showing the blocks with red boxes (using TikZ for the boxes)
+    \vspace{0.5cm}
+    \begin{tikzpicture}[overlay, remember picture]
+    \node (M) at (0, 0) {
+        $-\begin{bmatrix}
+        -X_i & -Y_i & -Z_i & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & x_i Z_i & x_i \\
+        0 & 0 & 0 & 0 & -X_i & -Y_i & -Z_i & -1 & y_i X_i & y_i Y_i & y_i Z_i & y_i \\
+        \cdots
+        \end{bmatrix}$
+    };
+    % First Red Box (around -Z_i, -1, 0, 0, 0, 0) - Approximate
+    \draw[red, ultra thick] (M.south west) ++(1.8cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
+    % Second Red Box (around x_i X_i, x_i Y_i, y_i Z_i, y_i) - Approximate
+    \draw[red, ultra thick] (M.south west) ++(5.7cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
+    % Third Red Box (around y_i X_i, y_i Y_i, y_i Z_i, y_i) - Approximate
+    \draw[red, ultra thick] (M.south west) ++(8.8cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
+
+    % Arrow and Text
+    \draw[->, red, ultra thick] (M.north east) ++(-2.5cm, 0.5cm) -- ++(0.5cm, 0) node[right, red, align=left] {\bfseries rank deficiency};
+    \end{tikzpicture}
+    \vspace{2cm} % Add space for the overlay to not clip
 \end{frame}
 
 \begin{frame}
