Add split trajectory and path images

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -162,8 +162,16 @@ resulta demasiado agresivo)
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=0.7\textwidth]{./images/trajectory_example.pdf}
-    \caption{Ejemplo de camino y trayectoria.}
+    \subfloat[Camino.]
+    {
+        \includegraphics[width=0.45\textwidth]{./images/path_example.pdf}
+    }
+    \hspace*{2cm}
+    \subfloat[Trajectoria.]
+    {
+        \includegraphics[width=0.35\textwidth]{./images/trajectory_example.pdf}
+    }
+    \caption{Ejemplo de camino y trayectoria de un robot.}
     \label{fig:trajectory_example}
 \end{figure}
 
