Slides 05: Improve slides

--- a/teoricas/teorica_05/slides.tex
+++ b/teoricas/teorica_05/slides.tex
@@ -32,15 +32,15 @@
 	\frame{\titlepage}
 	
 \section{Visión por computadora}
-\input{src/computer_vision.tex}
+%\input{src/computer_vision.tex}
 
 \section{Optical Flow}
-\input{src/optical_flow.tex}
+%\input{src/optical_flow.tex}
 
 \section{Direct Linear Transform (DLT)}
 \input{src/direct_linear_transform.tex}
 
 \section{Bibliografía}
-\input{src/bibliography.tex}
+%\input{src/bibliography.tex}
 	
 \end{document}
