--- a/teoricas/teorica_05/src/direct_linear_transform.tex
+++ b/teoricas/teorica_05/src/direct_linear_transform.tex
@@ -416,7 +416,7 @@ Implica
         \vdots \\
         \vec{a}_{x_n}^{\top} \\
         \vec{a}_{y_n}^{\top}
-      \end{bmatrix} \vec{p} = \underset{2I\times 12}{\vec{M}} \underset{12\times1}{\vec{p}} = 0
+      \end{bmatrix} \vec{p} = \underset{2I\times 12}{\vec{M}} \underset{12\times1}{\vec{p}} \stackrel{!}{=} 0
     \end{equation*}
   \end{itemize}
 
@@ -427,7 +427,7 @@ Implica
   \frametitle{Solving the Linear System (Homogeneous System => SVD)}
   \begin{itemize}
     \item Solving a system of linear equations of the form $\vec{A}\vec{x} = \vec{0}$ is equivalent to finding the null space of $\vec{A}$
-    \item Thus, we can apply the SVD to solve $\vec{M}\vec{p} = \vec{0}$
+    \item Thus, we can apply the Singular value decomposition (SVD) to solve $\vec{M}\vec{p} = \vec{0}$
     \item Choose $\vec{p}$ as the singular vector belonging to the singular value of 0
   \end{itemize}
 \end{frame}
@@ -435,21 +435,24 @@ Implica
 \begin{frame}
     \frametitle{Redundant Observations}
     \begin{itemize}
-        \item In case of redundant observations, we will have contradictions ($M\mathbf{p} \neq \mathbf{0}$):
-        \[
+        \item In case of redundant observations, we will have contradictions ($\vec{M}\mathbf{p} \neq \mathbf{0}$):
+        %
+        \begin{equation*}
             \mathbf{M} \mathbf{p} = \mathbf{w}
-        \]
+        \end{equation*}
+        %
         \item Find $\mathbf{p}$ such that it minimizes
-        \[
-            \Omega = \mathbf{w}^\mathsf{T} \mathbf{w}
-        \]
-        \[
-            \implies \mathbf{\hat{p}} = \underset{\mathbf{p}}{\arg\min} \ \mathbf{w}^\mathsf{T} \mathbf{w}
-        \]
-        \[
-            = \underset{\mathbf{p}}{\arg\min} \ \mathbf{p}^\mathsf{T} \mathbf{M}^\mathsf{T} \mathbf{M} \mathbf{p}
-        \]
-        \text{with} $\lVert\mathbf{P}\rVert_2 = \sum_{i,j} p_{ij}^2 = \lVert\mathbf{p}\rVert = 1$
+        %
+        \begin{equation*}
+            \Omega = \mathbf{w}^{\top} \mathbf{w}
+        \end{equation*}
+        \begin{align*}
+            \implies \mathbf{\hat{p}} &= \underset{\mathbf{p}}{\arg\min} \ \mathbf{w}^{\top} \mathbf{w}\\
+            &= \underset{\mathbf{p}}{\arg\min} \ \mathbf{p}^{\top} \mathbf{M}^{\top} \mathbf{M} \mathbf{p}
+        \end{align*}
+        \begin{equation*}
+          \text{with} \lVert\mathbf{P}\rVert_2 = \sum_{i,j} p_{ij}^2 = \lVert\mathbf{p}\rVert = 1
+        \end{equation*}
     \end{itemize}
 \end{frame}
 
@@ -460,9 +463,9 @@ Implica
     \begin{itemize}
         \item Singular value decomposition (SVD)
         \[
-            \mathbf{M}_{2I \times 12} = \mathbf{U}_{2I \times 12} \mathbf{S}_{12 \times 12} \mathbf{V}_{12 \times 12}^\mathsf{T} = \sum_{i=1}^{12} s_i \mathbf{u}_i \mathbf{v}_i^\mathsf{T}
+            \mathbf{M}_{2I \times 12} = \mathbf{U}_{2I \times 12} \mathbf{S}_{12 \times 12} \mathbf{V}_{12 \times 12}^{\top} = \sum_{i=1}^{12} s_i \mathbf{u}_i \mathbf{v}_i^{\top}
         \]
-        \item Choosing $\mathbf{p} = \mathbf{v}_{12}$ (the singular vector belonging to the **smallest singular value** $s_{12}$) minimizes $\Omega$
+        \item Choosing $\mathbf{p} = \mathbf{v}_{12}$ (the singular vector belonging to the smallest singular value $s_{12}$) minimizes $\Omega$
     \end{itemize}
 \end{frame}
 
@@ -471,7 +474,7 @@ Implica
     \frametitle{Obtaining the Projection Matrix}
     \begin{itemize}
         \item Choosing $\mathbf{p} = \mathbf{v}_{12}$ minimizes $\Omega$ and thus is our estimate of $\mathbf{P}$:
-        \[
+        \begin{equation*}
             \mathbf{p} = \begin{bmatrix}
             p_{11} \\
             \vdots \\
@@ -483,7 +486,7 @@ Implica
             p_{21} & p_{22} & p_{23} & p_{24} \\
             p_{31} & p_{32} & p_{33} & p_{34}
             \end{bmatrix}
-        \]
+        \end{equation*}
     \end{itemize}
     \vspace{1cm}
     \centering
@@ -502,34 +505,26 @@ Implica
         \item \textcolor{red}{\bfseries No solution}, if all points $\mathbf{X}_i$ are located on a \textcolor{red}{\bfseries plane}
     \end{itemize}
 
-    \vspace{0.5cm}
-    \centering
     % The matrix part is complex due to the arrows, so we'll use a simplified aligned version
-    \begin{equation*}
-    \mathbf{M} = 
-    \begin{bmatrix}
-    \cdots \\
-    \mathbf{a}_{x_i}^\mathsf{T} \\
-    \mathbf{a}_{y_i}^\mathsf{T} \\
-    \cdots
-    \end{bmatrix}
-    \end{equation*}
-    % The example row structure with arrows is very complex to code precisely,
-    % but we can represent the key row structure.
-    \vspace{1cm}
-    \begin{equation*}
-    \mathbf{a}_{x_i}^\mathsf{T} \implies
-    \begin{bmatrix}
-        \cdots \\
-        -X_i & -Y_i & -Z_i & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & x_i Z_i & x_i \\
-        0 & 0 & 0 & 0 & -X_i & -Y_i & -Z_i & -1 & y_i X_i & y_i Y_i & y_i Z_i & y_i \\
-        \cdots
-    \end{bmatrix}
-    \end{equation*}
-    \vspace{-1.5cm} % Pull up the matrix slightly to make space for the note
-    \begin{tikzpicture}[overlay, remember picture]
-        \draw[->, thick, red] ([xshift=2cm, yshift=0.5cm]current bounding box.south) -- ([xshift=4cm, yshift=1cm]current bounding box.south) node[right, red, align=left] {e.g., assume all $Z_i=0$};
-    \end{tikzpicture}
+    \begin{align*}
+      \mathbf{M} &= 
+      \begin{bmatrix}
+      \cdots \\
+      \mathbf{a}_{x_i}^{\top} \\
+      \mathbf{a}_{y_i}^{\top} \\
+      \cdots
+      \end{bmatrix}\\
+      % The example row structure with arrows is very complex to code precisely,
+      % but we can represent the key row structure.
+      &=
+      \begin{bmatrix}
+          & & & & & \cdots & & & & & & \\
+          -X_i & -Y_i & \color{red}{-Z_i} & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & x_i \color{red}{Z_i} & x_i \\
+          0 & 0 & 0 & 0 & -X_i & -Y_i & \color{red}{-Z_i} & -1 & y_i X_i & y_i Y_i & y_i \color{red}{Z_i} & y_i \\
+          & & & & & \cdots & & & & & &
+      \end{bmatrix}
+    \end{align*}
+    {\color{red} assume all $Z_{i} = 0$}
 \end{frame}
 
 % --- Slide: Critical Surfaces (2 - The one with the boxes/rank deficiency) ---
@@ -544,40 +539,30 @@ Implica
         \item \textcolor{red}{\bfseries No solution}, if all points $\mathbf{X}_i$ are located on a \textcolor{red}{\bfseries plane}
     \end{itemize}
 
-    \vspace{0.5cm}
-    \centering
-    % Simplified matrix structure focusing on the blocks
-    \begin{equation*}
-    \mathbf{M} = 
-    \begin{bmatrix}
-    \cdots \\
-    \mathbf{a}_{x_i}^\mathsf{T} \\
-    \mathbf{a}_{y_i}^\mathsf{T} \\
-    \cdots
-    \end{bmatrix}
-    \end{equation*}
-
-    % Matrix showing the blocks with red boxes (using TikZ for the boxes)
-    \vspace{0.5cm}
-    \begin{tikzpicture}[overlay, remember picture]
-    \node (M) at (0, 0) {
-        $-\begin{bmatrix}
-        -X_i & -Y_i & -Z_i & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & x_i Z_i & x_i \\
-        0 & 0 & 0 & 0 & -X_i & -Y_i & -Z_i & -1 & y_i X_i & y_i Y_i & y_i Z_i & y_i \\
-        \cdots
-        \end{bmatrix}$
-    };
-    % First Red Box (around -Z_i, -1, 0, 0, 0, 0) - Approximate
-    \draw[red, ultra thick] (M.south west) ++(1.8cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
-    % Second Red Box (around x_i X_i, x_i Y_i, y_i Z_i, y_i) - Approximate
-    \draw[red, ultra thick] (M.south west) ++(5.7cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
-    % Third Red Box (around y_i X_i, y_i Y_i, y_i Z_i, y_i) - Approximate
-    \draw[red, ultra thick] (M.south west) ++(8.8cm, 0.45cm) rectangle ++(1.7cm, 0.9cm);
-
-    % Arrow and Text
-    \draw[->, red, ultra thick] (M.north east) ++(-2.5cm, 0.5cm) -- ++(0.5cm, 0) node[right, red, align=left] {\bfseries rank deficiency};
-    \end{tikzpicture}
-    \vspace{2cm} % Add space for the overlay to not clip
+    % The matrix part is complex due to the arrows, so we'll use a simplified aligned version
+    \begin{align*}
+      \mathbf{M} &= 
+      \begin{bmatrix}
+      \cdots \\
+      \mathbf{a}_{x_i}^{\top} \\
+      \mathbf{a}_{y_i}^{\top} \\
+      \cdots
+      \end{bmatrix}\\
+      % The example row structure with arrows is very complex to code precisely,
+      % but we can represent the key row structure.
+      &=
+      \begin{bNiceMatrix}[margin] 
+        & & \phantom{0} & & & \cdots & \phantom{0} & & & & \phantom{0} & \\
+        -X_i & -Y_i & 0 & -1 & 0 & 0 & 0 & 0 & x_i X_i & x_i Y_i & 0 & x_i \\
+        0 & 0 & 0 & 0 & -X_i & -Y_i & 0 & -1 & y_i X_i & y_i Y_i & 0 & y_i \\
+        & & \phantom{0} & & & \cdots & \phantom{0} & & & & \phantom{0} &
+      \CodeAfter
+        \tikz \node [draw=red, rounded corners, fit = (1-3) (4-3)] { } ;
+        \tikz \node [draw=red, rounded corners, fit = (1-7) (4-7)] { } ;
+        \tikz \node [draw=red, rounded corners, fit = (1-11) (4-11)] { } ; 
+      \end{bNiceMatrix}
+    \end{align*}
+    {\color{red} assume all $Z_{i} = 0$}
 \end{frame}
 
 \begin{frame}
